force-app/main/default/objects/Lead__c/Lead__c.object-meta.xml
<CustomObject>
    <label>Farmer</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Farmer No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farmers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>