force-app/main/default/objects/Lead__c/fields/Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_No__c</fullName>
    <inlineHelpText>Enter 12 digit Aadhar No.</inlineHelpText>
    <label>Aadhar No.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>