force-app/main/default/objects/Lead__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address Landmark</label>
    <type>TextArea</type>
</CustomField>