force-app/main/default/objects/Lead__c/fields/Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_No__c</fullName>
    <inlineHelpText>10 digits Mobile No</inlineHelpText>
    <label>Alternate Mobile No.</label>
    <type>Phone</type>
</CustomField>