force-app/main/default/objects/Lead__c/fields/Call_Unreachable_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Unreachable_1__c</fullName>
    <label>Call Unreachable 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unreachable_Call</valueSetName>
    </valueSet>
</CustomField>