force-app/main/default/objects/Lead__c/fields/Call_Unreachable_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Unreachable_1_Date__c</fullName>
    <label>Call Unreachable 1 Date</label>
    <type>Date</type>
</CustomField>