force-app/main/default/objects/Lead__c/fields/Combined_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Combined_Follow_Up_Date__c</fullName>
    <description>Latest follow up date out of all the &apos;Product Information&apos; objects&apos; follow up dates.</description>
    <label>Product Info Max Follow Up Date</label>
    <summarizedField>Opportunity__c.Follow_up_Date__c</summarizedField>
    <summaryForeignKey>Opportunity__c.Lead__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>