force-app/main/default/objects/Lead__c/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <description>Whether the Farmer has been contacted or not. Marks a already contacted farmer as uncontacted if the follow up date has passed.</description>
    <formula>IF( AND(OR(Number_of_Ponds__c &lt;= 0, AND(Number_of_Ponds__c &gt; 0, NOT(ISBLANK(Overdue_Follow_Up__c)), Overdue_Follow_Up__c &gt; 0)),  Num_Converted_Product_Informations__c &lt;= 0), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>