force-app/main/default/objects/Lead__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>