force-app/main/default/objects/Lead__c/fields/Farmer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Farmer_First_Name__c</fullName>
    <label>Farmer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>