force-app/main/default/objects/Lead__c/fields/Farmer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Last_Name__c</fullName>
    <label>Farmer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>