force-app/main/default/objects/Lead__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <label>GST No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>