force-app/main/default/objects/Lead__c/fields/Is_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Is_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sometimes the &apos;Farmer&apos; is actually our distributor buying material on their own name for stock holding. This marks whether the person is an end-user or a reseller/distributor.</description>
    <inlineHelpText>Tick this box if this Farmer is an Avana Distributor</inlineHelpText>
    <label>Is Distributor?</label>
    <type>Checkbox</type>
</CustomField>