force-app/main/default/objects/Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kisan March 2022</fullName>
                <label>Lead - Kisan March 2022</label>
            </value>
            <value>
                <fullName>Dispatch Email</fullName>
            </value>
            <value>
                <fullName>TV Ad</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Subsidy List</fullName>
            </value>
            <value>
                <fullName>Toll Free Number Inquiry</fullName>
                <label>Toll Free Number Enquiry</label>
            </value>
            <value>
                <fullName>Gram Sabha</fullName>
            </value>
            <value>
                <fullName>Pond visit</fullName>
            </value>
            <value>
                <fullName>Individual meetings</fullName>
            </value>
            <value>
                <fullName>Krishi Darshan</fullName>
            </value>
            <value>
                <fullName>Bazaar Day</fullName>
            </value>
            <value>
                <fullName>Referred by other farmer</fullName>
            </value>
            <value>
                <fullName>Meeting during pond installation</fullName>
            </value>
            <value>
                <fullName>Marketyard</fullName>
                <label>Marketyard Referral</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Baramati KVK Exhibition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>