force-app/main/default/objects/Lead__c/fields/Lost_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lost_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Lead</label>
    <type>Checkbox</type>
</CustomField>