force-app/main/default/objects/Lead__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <inlineHelpText>Mobile Number Should be 10 Digits</inlineHelpText>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>