force-app/main/default/objects/Lead__c/fields/Num_Converted_Product_Informations__c.field-meta.xml
<CustomField>
    <fullName>Num_Converted_Product_Informations__c</fullName>
    <description>Number of Product Information&apos;s that are marked as Converted</description>
    <label>Num Converted Product Informations</label>
    <summaryFilterItems>
        <field>Opportunity__c.Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity__c.Lead__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>