force-app/main/default/objects/Lead__c/fields/Number_of_Ponds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ponds__c</fullName>
    <description>Counts the number of Product Informations (Pond liner only, not retail) that is owned by this Farmer.</description>
    <label>Number of Ponds</label>
    <summaryForeignKey>Opportunity__c.Lead__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>