force-app/main/default/objects/Lead__c/fields/Overdue_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Follow_Up__c</fullName>
    <description>Number of days follow up is overdue. Takes the latest of the follow up date on this &apos;Farmer&apos; object and all it&apos;s child &apos;Product Information&apos; objects to calculate.</description>
    <formula>IF(ISBLANK( Follow_up_Date__c ), Today() - Combined_Follow_Up_Date__c, IF(ISBLANK(Combined_Follow_Up_Date__c), Today() - Follow_up_Date__c, MIN(Today() - Follow_up_Date__c, Today() -  Combined_Follow_Up_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Follow Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>