force-app/main/default/objects/Lead__c/fields/Pond_Digging_Done__c.field-meta.xml
<CustomField>
    <fullName>Pond_Digging_Done__c</fullName>
    <label>Pond Digging Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>