force-app/main/default/objects/Lead__c/fields/Products_Interested__c.field-meta.xml
<CustomField>
    <fullName>Products_Interested__c</fullName>
    <label>Products Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jalasanchay</fullName>
            </value>
            <value>
                <fullName>Retail Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>