force-app/main/default/objects/Lead__c/fields/Scheme_Booking__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Booking__c</fullName>
    <label>Scheme Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kisaan (Dec 2020)</fullName>
            </value>
            <value>
                <fullName>Kisaan (Dec 2019)</fullName>
            </value>
            <value>
                <fullName>Kisan March 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>