force-app/main/default/objects/Lead__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>TEXT( Tehsil__r.District__r.State__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>