force-app/main/default/objects/Lead__c/validationRules/Alternate_Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternate_Mobile_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(NOT(ISBLANK(  Alternate_Mobile_No__c  )),OR(NOT(LEN(  Alternate_Mobile_No__c  ) = 10),CONTAINS(  Alternate_Mobile_No__c ,&apos;.&apos;),NOT(ISNUMBER(  Alternate_Mobile_No__c  ))),false)</errorConditionFormula>
    <errorMessage>Mobile No Should be 10 Digits.</errorMessage>
</ValidationRule>