force-app/main/default/objects/Lead__c/validationRules/Mobile_10_digit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_10_digit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK( Mobile_Number__c )),OR(NOT(LEN( Mobile_Number__c ) = 10),CONTAINS( Mobile_Number__c ,&apos;.&apos;),NOT(ISNUMBER( Mobile_Number__c ))),false)</errorConditionFormula>
    <errorMessage>Mobile Number Should be 10 Digits</errorMessage>
</ValidationRule>