force-app/main/default/objects/Lead__c/listViews/All_Farmers.listView-meta.xml
<ListView>
    <fullName>All_Farmers</fullName>
    <columns>NAME</columns>
    <columns>Farmer_First_Name__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheme_Booking__c</columns>
    <columns>IsConverted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Farmers</label>
</ListView>