force-app/main/default/objects/Lead__c/listViews/Booking_Scheme_Farmers.listView-meta.xml
<ListView>
    <fullName>Booking_Scheme_Farmers</fullName>
    <columns>NAME</columns>
    <columns>Farmer_First_Name__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheme_Booking__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Scheme_Booking__c</field>
        <operation>notEqual</operation>
        <value>None</value>
    </filters>
    <label>Booking Scheme Farmers</label>
</ListView>